// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StringControl renders StringControl unchanged 1`] = `
<div>
  <div
    class="sc-e191228e-0 bwBNFU"
  >
    <div
      class="sc-9db10430-0 gtsrND"
    >
      <input
        class="hasData"
        type="text"
        value="derp"
      />
      <label
        class="sc-aec1a1a-0 fjKCPb"
      >
        String test
      </label>
    </div>
    <div
      class="sc-955ed11e-0 eSGmlb"
    />
  </div>
</div>
`;

exports[`StringControl renders StringControl:Phone unchanged 1`] = `
<div>
  <div
    class="sc-e191228e-0 bwBNFU"
  >
    <div
      class="sc-9db10430-0 gtsrND"
    >
      <input
        class="noData"
        type="text"
        value=""
      />
      <label
        class="sc-aec1a1a-0 fjKCPb"
      >
        String test
      </label>
    </div>
    <div
      class="sc-955ed11e-0 eSGmlb"
    />
  </div>
</div>
`;
